Fix: 소셜 로그인 userId 반환 안되는거 수정 (#130)